--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,12 +44,12 @@ jobs:
           # your sftp server port, default to 22
           port: 22 # default is 22
           # you can copy private_key from your *.pem file, keep format
-          ssh_private_key: 
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           # will put all file under this path
           local_path: $GITHUB_WORKSPACE
           # files will copy to under remote_path
           remote_path: /var/www/mackeys.runkel.org/
           # connection via sftp protocol only
-          sftp_only: true # optional
+          sftp_only: false # optional
           # sftp args
           # args: # optional
